<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRoomActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/primary_color">

            <TextView
                style="@style/HeadingText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/add_your_room"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </Toolbar>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_grey"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/basic_details_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:backgroundTint="@color/bg_grey"
                android:elevation="0dp"
                android:textColor="@color/primary_color"
                android:shadowColor="@color/bg_grey"
                style="@style/HintTitle"
                android:text="@string/basic_details" />
            <Button
                android:id="@+id/locality_details_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:backgroundTint="@color/bg_grey"
                android:elevation="0dp"
                android:enabled="false"
                android:shadowColor="@color/bg_grey"
                style="@style/HintTitle"
                android:text="@string/locality_details"/>
            <Button
                android:id="@+id/photos_tv"
                style="@style/HintTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/bg_grey"
                android:gravity="center"
                android:enabled="false"
                android:text="@string/photos" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>