<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicDetailsFragment"
    android:id="@+id/cn"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/bg_color"
            android:elevation="6dp"
            android:padding="16dp"
            android:paddingBottom="200dp">

            <TextView
                android:id="@+id/textView"
                style="@style/HintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                app:layout_constraintBottom_toTopOf="@+id/mobile_num_editText"
                app:layout_constraintStart_toStartOf="@+id/mobile_num_editText" />

            <EditText
                android:id="@+id/mobile_num_editText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/outline_bg"
                android:drawableStart="@drawable/dialpad_24"
                android:padding="8dp"
                android:maxLength="10"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/HintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apartment_type"
                app:layout_constraintBottom_toTopOf="@+id/apartment_linearLayout"
                app:layout_constraintStart_toStartOf="@+id/apartment_linearLayout" />

            <LinearLayout
                android:id="@+id/apartment_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/outline_bg"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobile_num_editText">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/ic_baseline_apartment_24" />

                <Spinner
                    android:id="@+id/apartment_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <TextView
                style="@style/HintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_type"
                app:layout_constraintBottom_toTopOf="@+id/room_linearLayout"
                app:layout_constraintStart_toStartOf="@+id/room_linearLayout" />

            <LinearLayout
                android:id="@+id/room_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/outline_bg"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apartment_linearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/ic_baseline_roofing_24" />

                <Spinner
                    android:id="@+id/room_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <TextView
                style="@style/HintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preffered_tennants"
                app:layout_constraintBottom_toTopOf="@+id/preffered_tennant_linearLayout"
                app:layout_constraintStart_toStartOf="@+id/preffered_tennant_linearLayout" />

            <LinearLayout
                android:id="@+id/preffered_tennant_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/outline_bg"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/room_linearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/password_keyy" />

                <Spinner
                    android:id="@+id/preffered_tennant_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <TextView
                style="@style/HintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Expected_Rent"
                app:layout_constraintBottom_toTopOf="@+id/expected_rent"
                app:layout_constraintStart_toStartOf="@+id/expected_rent" />

            <EditText
                android:id="@+id/expected_rent"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/outline_bg"
                android:drawableStart="@drawable/rupee"
                android:padding="8dp"
                android:maxLength="6"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/preffered_tennant_linearLayout" />


            <LinearLayout
                android:id="@+id/water_supply_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/outline_bg"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/expected_rent">


                <Spinner
                    android:id="@+id/water_supply_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/water_supply_linearLayout">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/outline_bg">

                    <Spinner
                        android:id="@+id/kitchen_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/outline_bg">

                    <Spinner
                        android:id="@+id/bathroom_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <EditText
                    android:id="@+id/total_floor_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="3"
                    android:background="@drawable/outline_bg"
                    android:gravity="center"
                    android:hint="@string/total_floor" />

                <EditText
                    android:id="@+id/floor_number_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="3"
                    android:background="@drawable/outline_bg"
                    android:gravity="center"
                    android:hint="@string/floor_no" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                style="@style/HeadingText"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/other_amenties"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <LinearLayout
                android:id="@+id/other_amenties_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/bg_grey"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingTop="4dp"
                android:paddingBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/bed_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginRight="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="110dp"
                        android:text="@string/bed"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cooler_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginRight="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="86dp"
                        android:text="@string/Cooler"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/freez_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginRight="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="90dp"
                        android:text="@string/freez"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/ac_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginRight="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="37dp"
                        android:text="@string/ac"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tv_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginRight="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="100dp"
                        android:text="@string/tv"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_and_continue"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/primary_color"
        android:elevation="10dp"
        android:text="@string/save_and_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>